fix perfect scrollbar

--- a/src/sass/templates/_sidebar.scss
+++ b/src/sass/templates/_sidebar.scss
@@ -8,9 +8,12 @@
     .app-brand{
         width: 100%;
         height: 64px;
-        margin-top: 12px;
+        margin-top: 0;
+        padding-top: 10px;
         padding-right: 2rem;
         padding-left: 2rem;
+        background-color: #ffffff;
+        z-index: 1081;
 
         .sidebar-menu-toggle{
             display: none;
